<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SubmitActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submission_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/secColorText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/divider_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/etFirstName"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="4dp"
            android:autofillHints="@string/first_name_hint"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:nextFocusRight="@+id/etLastName"
            android:nextFocusForward="@+id/etLastName"
            app:layout_constraintEnd_toStartOf="@+id/etLastName"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:autofillHints="@string/last_name_hint"
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toEndOf="@+id/etFirstName"
            app:layout_constraintTop_toTopOf="@+id/etFirstName" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/spacing"
            android:autofillHints="@string/email_hint"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/etFirstName"
            app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

        <EditText
            android:id="@+id/etLink"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/spacing"
            android:autofillHints="Link"
            android:ems="10"
            android:hint="@string/link_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:nextFocusForward="@+id/btnSubmit"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/submit_button_background"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etLink"
            app:layout_constraintStart_toStartOf="@+id/etLink"
            app:layout_constraintTop_toBottomOf="@+id/etLink" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>